Fix layout on mobile/narrow screens

--- a/src/scss/custom/_bar.scss
+++ b/src/scss/custom/_bar.scss
@@ -13,6 +13,7 @@
     .status-row {
         display: flex;
         margin-bottom: 2em;
+        width: 100%;
 
         .bar {
             flex-grow: 1;
